# aire-agents

./: README.md  Taskfile.yml  aire-infra-questions.md
agents/adk-root/: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  agent.py  pyproject.toml  schema.sql
agents/adk-root/tests/: test_agent.py
chart/: .helmignore  Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  agent-adk-root.yaml  agent-dba.yaml  agent.yaml  backend-gemini.yaml  gateway.yaml  mcp-postgres-wrapper.yaml  mcp-postgres.yaml  model-config.yaml  postgres.yaml
infra/agentgateway/: app-chart.yaml
infra/day-0/: app.yaml
infra/kagent/: app-chart.yaml  app-crds.yaml
manifests/agentgw/: app-chart.yaml  app-crds.yaml
workloads/: kustomization.yaml
workloads/agentgateway/: app-chart.yaml  app-crds.yaml
workloads/aire-config/: app.yaml
workloads/contextforge/: README.md  app.yaml
workloads/gateway-api/: app.yaml
workloads/kagent/: app-chart.yaml  app-crds.yaml
workloads/postgres-operator/: app.yaml
